# nuscenes-devkit

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
python-sdk/nuscenes/: __init__.py  _lib.pyi  nuscenes.py
rust-src/: common.rs  domain.rs  lib.rs  model.rs  nusc.rs  proxy.rs  table.rs
rust-src/domain/: annotation.rs  extensions.rs  extraction.rs  vehicle.rs
rust-src/model/: annotation.rs  extensions.rs  extraction.rs  taxonomy.rs  vehicle.rs
scripts/: benchmark.py  test.py
src/: common.rs  domain.rs  lib.rs  model.rs  nusc.rs  proxy.rs
src/domain/: annotation.rs  extraction.rs  taxonomy.rs
src/model/: annotation.rs  extraction.rs  taxonomy.rs
