[package]
name = "nuscenes-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_nuscenes_rs"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
enum-map = "2.7.3"
hex = { version = "0.4.3", features = ["serde"] }
memmap2 = "0.9.9"
pyo3 = "0.27.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["hex"] }
